[package]
name = "blockchain-file-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md4 = "0.10.2"
hex = "0.4.3"
clap = { version = "4.3.11", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
termion = "2.0.1"

